demo fix commit

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="">
 
         <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700&subset=latin,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.min.css">
         <link rel="stylesheet" href="jquery.multilevelpushmenu.css">
         <link rel="stylesheet" href="mlpm.css">
     </head>
@@ -181,8 +181,7 @@
             </nav>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="../jquery-1.10.2.min.js"><\/script>')</script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="jquery.multilevelpushmenu.min.js"></script>
         <script type="text/javascript" src="mlpm.js"></script>
     </body>
