README + demo changed

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.min.css">
         <link rel="stylesheet" href="jquery.multilevelpushmenu.css">
         <link rel="stylesheet" href="mlpm.css">
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
