--- a/demo/addremove/addremove.html
+++ b/demo/addremove/addremove.html
@@ -30,6 +30,9 @@
               <li class="active">
                 <a id="removeitems" class="btn btn-lg btn-primary" href="#" role="button">Remove <span class="badge">"Samsung"</span> item</a>
               </li>
+              <li class="active">
+                <a id="counteritems" class="btn btn-lg btn-primary" href="#" role="button">Counter add item</a>
+              </li>
             </ul>
         </div>
         <div id="menu">
