--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="//oss.maxcdn.com/libs/modernizr/2.6.2/modernizr.min.js"></script>
-        <script src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
