--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
             <!-- Main component for a primary marketing message or call to action -->
             <div class="jumbotron">
-                <h1>Multi-level push menu v2.1.4 <span class="made-by">by <a href="https://ecm-dms.rs" target="_blank">ECM-DMS (BPM)</a></span></h1>
+                <h1>Multi-level push menu v2.1.4 <span class="made-by">by Momcilo Dzunic</span></h1>
                 <p>Multi-level push menu is cross-browser compatible jQuery plug-in allowing endless nesting of navigation elements.</p>
                 <p>Following basic, lightweight release v1, version v2 brings number of
                 exposed plug-in methods (<a class="scroller" href="#methods"><i>NEW! Redraw, Visible menus, Hidden menus, Propagate events</i></a>), options (<a class="scroller" href="#examplefullexpandcollapse"><i>NEW! Full menu collapse</i></a>) and events/callbacks (<a class="scroller" href="#events"><i>onMenuReady and onMenuSwipe added</i></a>). Release v2 now supports native mobile events. (<a class="scroller" href="#video"><i>NEW! Expand/Collapse navigation with a left/right swipe gesture</i></a>)</p>
@@ -1542,7 +1542,7 @@ var arrMenu = [
 
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-45795667-3']);
-          _gaq.push(['_setDomainName', 'make.rs']);
+          _gaq.push(['_setDomainName', 'dzunic.net']);
           _gaq.push(['_trackPageview']);
 
           (function() {
